--- a/index.html
+++ b/index.html
@@ -2,11 +2,313 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
+    <title>Глэйси - интернет-магазин мороженого</title>
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <input class="slider-toggle-1" type="radio" name="slider-toggle" id="toggle-1" checked>
+    <input class="slider-toggle-2" type="radio" name="slider-toggle" id="toggle-2">
+    <input class="slider-toggle-3" type="radio" name="slider-toggle" id="toggle-3">
 
+    <div class="site-background">
+
+      <header class="container main-header">
+
+        <div class="logo">
+          <img src="img/logo.svg" alt="Логотип Глейси" width="154" height="64">
+        </div>
+
+        <div class="nav">
+          <ul class="site-menu">
+            <li class="site-menu__item site-menu__item-1">
+              <a class="site-menu__link" href="#">Каталог</a>
+              <div class="catalog-wrapper">
+                <ul class="catalog-list">
+                  <li class="catalog__item">
+                    <a class="catalog__link catalo__link-new-product" href="#">Новинки</a>
+                  </li>
+                  <li class="catalog__item">
+                    <a class="catalog__link" href="catalog.html">Сливочное</a>
+                  </li>
+                  <li class="catalog__item">
+                    <a class="catalog__link" href="#">Щербеты</a>
+                  </li>
+                  <li class="catalog__item">
+                    <a class="catalog__link" href="#">Фруктовый лед</a>
+                  </li>
+                  <li class="catalog__item">
+                    <a class="catalog__link" href="#">Мелорин</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="site-menu__item site-menu__item-2">
+              <a class="site-menu__link" href="#">Доставка и оплата</a>
+            </li>
+            <li class="site-menu__item site-menu__item-3">
+              <a class="site-menu__link" href="#">О Компании</a>
+            </li>
+          </ul>
+
+          <ul class="user-menu">
+            <li class="user-menu__item user-menu__item-1">
+              <a class="user-menu__link user-menu__link-search" href="#"></a>
+              <div class="search-wrapper">
+                <form class="search" action="https://echo.htmlacademy.ru" method="POST">
+                  <input class="search__input" type="search" placeholder="Крем-брюле">
+                </form>
+              </div>
+            </li>
+            <li class="user-menu__item user-menu__item-2">
+              <a class="user-menu__link user-menu__link-enter" href="#">Вход</a>
+              <div class="user-account-wrapper">
+                <form class="user-account" action="https://echo.htmlacademy.ru" method="POST">
+                  <input class="user-account__input user-account__email" type="email" placeholder="email@example.com">
+                  <input class="user-account__input user-account__password" type="password" placeholder="&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;">
+                  <div class="user-account-footer">
+                    <button class="button button--user-account" type="submit">Войти</button>
+                    <div class="help">
+                      <a class="help__link" href="#">Забыли пароль?</a>
+                      <a class="help__link" href="#">Новая регистрация</a>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </li>
+            <li class="user-menu__item user-menu__item-3">
+              <a class="user-menu__link user-menu__link-cart" href="#">Пусто</a>
+            </li>
+          </ul>
+        </div>
+
+      <div class="office-hours">С 10 до 20, ежедневно</div>
+      <div class="office-phone">8 812 450-25-25</div>
+
+    </header>
+
+    <main>
+      <div class="container">
+        <h1 class="visually-hidden">Глейси - интернет-магазин мороженого</h1>
+
+        <section class="slider">
+
+          <h2 class="visually-hidden">Новинки мороженого</h2>
+
+          <ul class="toggle-list">
+            <li class="toggle-list__item">
+              <label class="toggle-list__label label-1" for="toggle-1"></label>
+            </li>
+            <li class="toggle-list__item">
+              <label class="toggle-list__label label-2" for="toggle-2"></label>
+            </li>
+            <li class="toggle-list__item">
+              <label class="toggle-list__label label-3" for="toggle-3"></label>
+            </li>
+          </ul>
+
+          <ul class="slider-list">
+            <li class="slider-list__item slider-1">
+              <img src="img/slider-1.png" width="1045" height="881">
+              <div class="slider__wrapper">
+                <p class="slider__title">Крем-брюле и пломбир с малиновым джемом</p>
+                <a class="button button--slider" href="#">Давайте оба!</a>
+              </div>
+            </li>
+            <li class="slider-list__item slider-2">
+              <img src="img/slider-2.png" width="1065" height="859">
+              <div class="slider__wrapper">
+                <p class="slider__title">Шоколадный пломбир и лимонный сорбет</p>
+                <a class="button button--slider" href="#">Давайте оба!</a>
+              </div>
+            </li>
+            <li class="slider-list__item slider-3">
+              <img src="img/slider-3.png" width="1079" height="854">
+              <div class="slider__wrapper">
+                <p class="slider__title slider__title-3">Пломбир с помадкой и клубничный щербет</p>
+                <a class="button button--slider" href="#">Давайте оба!</a>
+              </div>
+            </li>
+          </ul>
+
+        </section>
+
+        <section class="promotions">
+          <h2 class="visually-hidden">Выгодные промо-акции при покупке мороженого</h2>
+          <ul class="promotions__list">
+            <li class="promotion promotion-raspberry">
+              <p class="promotion__slogan">Малинка даром!</p>
+              <p class="promotion__desc">
+                При покупке 2 кг любого фруктового мороженого,
+                добавим в ваш заказ банку малинового варенья бесплатно.
+              </p>
+              <span class="promotion__button">
+                <a class="button button--promotion" href="#">Хочу варенье!</a>
+              </span>
+            </li>
+
+            <li class="promotion promotion-chocolate">
+              <p class="promotion__slogan">Шоколадки даром!</p>
+              <p class="promotion__desc">
+                При покупке 2 кг пломбира, добавим в ваш заказ упаковку
+                вкуснейшей шоколадной присыпки совершенно бесплатно.
+              </p>
+              <span class="promotion__button">
+                <a class="button button--promotion" href="#">Хочу шоколадки!</a>
+              </span>
+            </li>
+          </ul>
+        </section>
+
+        <section class="popular-goods">
+          <h2 class="visually-hidden">Популярное мороженое</h2>
+          <ul class="popular-goods__list">
+            <li class="popular-goods__item popular-goods__item-1">
+              <div class="popular-goods__wrapper"></div>
+                <div class="popular-goods__content">
+                  <h3 class="popular-goods__title"><a class="popular-goods__link" href="">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></h3>
+                  <img src="img/ice-cream-1.png" alt="" width="267" height="267">
+                  <span class="popular-goods__price">310</span>
+                  <a class="button button--popular-goods" href="#">Быстрый просмотр</a>
+                </div>
+
+            </li>
+            <li class="popular-goods__item popular-goods__item-2">
+              <div class="popular-goods__wrapper"></div>
+                <div class="popular-goods__content">
+                  <h3 class="popular-goods__title"><a class="popular-goods__link" href="">Сливочно-кофейное с кусочками шоколада</a></h3>
+                  <img src="img/ice-cream-2.png" alt="" width="267" height="267">
+                  <span class="popular-goods__price">380</span>
+                  <a class="button button--popular-goods" href="#">Быстрый просмотр</a>
+                </div>
+            </li>
+            <li class="popular-goods__item popular-goods__item-3">
+              <div class="popular-goods__wrapper"></div>
+                <div class="popular-goods__content">
+                  <h3 class="popular-goods__title"><a class="popular-goods__link" href="">Сливочно-клубничное с присыпкой из белого шоколада</a></h3>
+                  <img src="img/ice-cream-3.png" alt="" width="267" height="267">
+                  <span class="popular-goods__price">355</span>
+                  <a class="button button--popular-goods" href="#">Быстрый просмотр</a>
+                </div>
+            </li>
+            <li class="popular-goods__item popular-goods__item-4">
+              <div class="popular-goods__wrapper"> </div>
+                <div class="popular-goods__content">
+                  <h3 class="popular-goods__title"><a class="popular-goods__link" href="">Сливочное крем-брюле с карамельной подливкой</a></h3>
+                  <img src="img/ice-cream-4.png" alt="" width="267" height="267">
+                  <span class="popular-goods__price">415</span>
+                  <a class="button button--popular-goods" href="#">Быстрый просмотр</a>
+                </div>
+            </li>
+          </ul>
+        </section>
+
+        <section class="advantages">
+          <h2 class="advantages__title">Магазин Глэйси – это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+          <ul class="advantages__list">
+            <li class="advantages__item advantages__item-1">
+              <p>Все наше мороженое изготавливается на собственном
+              производстве, с использованием современного оборудования
+              и проверенных временем технологий.</p>
+            </li>
+            <li class="advantages__item advantages__item-2">
+              <p>Закупка ингредиентов производится только у проверенных
+              фермерских хозяйств и компаний, с которыми нас связывает
+              долговременное сотрудничество.</p>
+            </li>
+            <li class="advantages__item advantages__item-3">
+              <p>Для приготовления мороженого используются настоящие сливки
+              и молоко высочайшего качества. Все дополнительные
+              ингредиенты и добавки произведены из натурального,
+              экологически чистого сырья.</p>
+            </li>
+            <li class="advantages__item advantages__item-4">
+              <p>Доставка нашего мороженого до заказчиков осуществляется
+              в специальном термопаке, который не дает мороженому
+              растаять в пути и позволяет сохранить превосходный вкус.</p>
+            </li>
+          </ul>
+        </section>
+
+        <div class="news-subscribe-wrapper">
+
+          <section class="news">
+            <h2 class="news__title"><a class="news__link" href="#">10 способов сервировки фруктовых щербетов к столу</a></h2>
+            <p>Новое в нашем блоге</p>
+          </section>
+
+          <div class="subscribe-wrapper">
+            <section class="subscribe">
+              <h2 class="visually-hidden">Подписка на рассылку полезной информации</h2>
+              <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе
+              всего самого вкусного, что у нас происходит. Обещаем не спамить
+              и не слать всякой ненужной ерунды. Честно =)
+              </p>
+              <form class="subscribe__form" action="https://echo.htmlacademy.ru" method="POST">
+                <input class="subscribe__input" type="email" name="email" placeholder="email@example.com">
+                <button class="button button--subscribe" type="submit">Отправить</button>
+              </form>
+            </section>
+          </div>
+        </div>
+      </div>
+
+      <section class="contacts">
+        <h2 class="visually-hidden">Контактная информация</h2>
+        <div class="container contacts__static-map">
+          <img src="img/map.jpg" alt="" height="430">
+        </div>
+        <iframe class="contacts__live-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003244!2d30.320858716317513!3d59.93871916905395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1572118901429!5m2!1sru!2sru"></iframe>
+        <div class="contacts-info">
+          <p class="contacts-info__caption caption-address">
+            Адрес главного офиса
+            и офлайн-магазина:</p>
+          <p class="contacts-info__address">
+            ул. Большая Конюшенная
+            19/8, Санкт-Петербург</p>
+          <p class="contacts-info__caption caption-tel">
+            Для заказов по телефону:</p>
+          <p class="contacts-info__tel">8 812 450-25-25</p>
+          <p class="contacts-info__caption caption-time">(с 10 до 20 ежедневно)</p>
+          <p class="contacts-button__position"><a class="button button--contacts" href="#">Форма обратной связи</a></p>
+        </div>
+      </section>
+
+    </main>
+
+    <footer class="container main-footer">
+
+      <ul class="socials">
+        <li class="socials-link__item"><a class="socials-link twitter" href="#"></a></li>
+        <li class="socials-link__item"><a class="socials-link instagramm" href="#"></a></li>
+        <li class="socials-link__item"><a class="socials-link facebook" href="#"></a></li>
+        <li class="socials-link__item"><a class="socials-link vk" href="#"></a></li>
+      </ul>
+
+      <ul class="service-info">
+        <li class="service-info__column-1">
+          <a class="service-info__link provider" href="#">Для поставщиков</a>
+          <a class="service-info__link" href="#">О производстве</a>
+        </li>
+        <li class="service-info__column-2">
+          <a class="service-info__link" href="#">Наши документы</a>
+          <a class="service-info__link" href="#">Экологические стандарты</a>
+        </li>
+      </ul>
+
+      <ul class="web-dev-info">
+        <li>
+          <a class="logo-html" href="https://htmlacademy.ru/intensive/htmlcss">
+            <img src="img/logo-htmlacademy.svg" alt="Логотип HTML Academy" width="109" height="38">
+          </a>
+        </li>
+        <li>
+          <p>Сделано в <a class="link-html" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &copy; 2019</p>
+        </li>
+      </ul>
+
+    </footer>
+</div>
   </body>
 </html>
