еще правки плэйсхолдера

--- a/catalog.html
+++ b/catalog.html
@@ -138,7 +138,7 @@
             </fieldset>
 
             <fieldset class="filter__fieldset fatness">
-              <legend class="filter__legend">Жирность</legend>
+              <legend class="filter__legend">Жирность:</legend>
               <div class="fatness-wrapper">
                 <input type="radio" name="fatness" id="fatness-1" value="0%">
                 <label for="fatness-1">0%</label>
