2 проект Глейси - Защита 1 попытка

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Глейси - интернет-магазин мороженого</title>
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
 
@@ -327,6 +327,6 @@
         <span class="visually-hidden">Закрыть</span>
       </button>
     </section>
-    <script src="js/popup.js"></script>
+    <script src="js/js.min.js"></script>
   </body>
 </html>
