--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Глейси - интернет-магазин мороженого</title>
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
 
   <body class="page-catalog">
